check whether single object

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,11 @@
         <url-pattern>/B</url-pattern>
     </servlet-mapping>
     
+        <servlet-mapping>
+        <servlet-name>A</servlet-name>
+        <url-pattern>/A</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
