--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,6 +25,16 @@
         <url-pattern>/A</url-pattern>
     </servlet-mapping>
     
+        <servlet>
+        <servlet-name>C</servlet-name>
+        <servlet-class>C</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>C</servlet-name>
+        <url-pattern>/C</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
