--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     
+    <context-param>
+        <param-name>app</param-name>
+        <param-value>Test</param-value>
+    </context-param>
+    
     <servlet>
         <servlet-name>A</servlet-name>
         <servlet-class>A</servlet-class>
